--- a/components/pages/Home/HomeStyle.css
+++ b/components/pages/Home/HomeStyle.css
@@ -15,6 +15,22 @@
     margin-bottom: 8px;
 
 }
+.header_buttons span {
+    text-transform: capitalize;
+}
+.outer-hero{
+    padding-top: 100px;
+}
+.vite_img img{
+    height: 150px;
+}
+.develop_demo_benefits{
+    padding-left: 60px;
+    padding-right: 70px;
+}
+.develop_demo_benefits p{
+    font-size: 16px;
+}
 
 @media screen and (max-width:1180px){
     .center_path_lines .div_line{
@@ -35,6 +51,8 @@
     .outer-hero {
         padding-top: 0;
         padding: 50px 90px 0px;
+        position: relative;
+        z-index: -1;
     }
     .outer-hero .hero_tittle_section  h1 {
         font-size: 5rem;
@@ -51,7 +69,6 @@
     .outer-hero .hero_tittle_section button{
         gap: 0.25rem;
         font-size: 0.75rem;
-        width: 100%;
         margin-bottom: 12px;
     }
     .trusted_partners{
@@ -65,7 +82,7 @@
     .outer-hero  .outer_btns{
         margin-top: 0.625rem;
         gap: 0.75rem;
-        display: block;
+        
     }
     .build_inspiration_heading .build_heading2{
         font-size: 1.5rem;
@@ -138,12 +155,7 @@
     .preview-item_wrapper .window_screen {
         margin-top: 30px;
     }
-    .previus_push_comment p {
-        font-size: 10px;
-    }
-    .previus_push_comment p span{
-        font-size: 10px;
-    }
+  
     .preview_content_text {
         margin-top: 20px;
     }
@@ -252,7 +264,6 @@
     }
     .counter_section{
         margin-top: -170px;
-        background-color: #fff;
         position: relative;
     }
     .button_content .text_hide{
@@ -311,14 +322,119 @@
     .get_started_wrapper {
         margin: 0px;
       }
+      .contact_link{
+        display:none;
+      }
+      .contact_li{
+        display: block;
+      }
+      .mobile-view{
+        display: grid;
+        margin: 20px 0px;
+      }
+      .mobile-view button{
+        box-shadow: none;
+      }
+      .navbar{
+        padding-top: 20px;
+        padding-bottom: 20px;
+      }
+      .branch_section p{
+        font-size: 17px;
+      }
+      .outer_preview_content {
+        width: 80%;
+    }
+    .branch_section{
+        width: 80%;
+    }
 }
+
+@media screen and (max-width:768px){
+    .outer-hero {
+        padding: 180px 65px 0px;
+    }
+    .outer-hero .hero_tittle_section  h1 {
+        font-size: 6rem;
+        line-height: 100px;
+    }
+    .outer-hero .hero_tittle_section h2{
+        padding: 20px 0px 30px;
+        font-size: 18px;
+    }
+    .trusted_team_heading h2{
+        padding-bottom: 0;
+    }
+    .trusted_partners {
+        padding-bottom: 130px;
+    }
+    .build_inspiration_heading h2 {
+        font-size: 60px;
+        line-height: 66px;
+    }
+    .window_screen #code-container {
+        font-size: 17px;
+    }
+    .commerce_website {
+        left: 6%;
+    }
+    .window_screen{
+        left: 0px;
+        position: relative;
+    }
+    .develop_demo .develop_demo_benefits {
+        padding-top: 240px;
+    }
+    .develop_demo_benefits_item p {
+        margin-bottom: 30px;
+        font-size: 19px;
+        line-height: 28px;
+        letter-spacing: -0.02em;
+        padding: 0px 46px;
+    }
+    .logos_framework div {
+        width: 11%;
+    }
+    .preview_tittle{
+        font-size: 56px;
+    }
+    .push_section p {
+        margin: 6px 20px 30px;
+    }
+    .outer_window{
+        width: 80%;
+    }
+    .window_screen{
+        height: 250px;
+    }
+    .previus_push_comment{
+        padding-left: 30px;
+    }
+    .branch_section{
+        width: 80%;
+    }
+}
+
+
+
+
+
 
 @media screen and (max-width:575px) {
     .outer-hero {
         padding-top: 0;
-        padding: 50px 20px 0px;
+        padding: 120px 21px 0px;
     }
-    
+    .outer-hero .hero_tittle_section button {
+        font-size: 16px;
+    }
+    .page-header {
+        padding: 0;
+    }
+    .build_inspiration_heading h4{
+        padding: 20px 0px 15px;
+        margin: 0;
+    }
     .develop_demo .develop_demos_window .code_editor {
         width: 100%;
     }
@@ -334,20 +450,128 @@
     .Import_Git_Repository {
         width: 100%;
         padding: 10px;
+        box-shadow: none;
+        border: none;
+        padding: 20px;
     }
     .clone_template {
         width: 100%;
+        background: #fafafa;
+        padding: 20px;
     }
     .Import_Git_Repository h5 {
-        font-size: 20px;
+        font-size: 24px;
+        text-align: center;
+    }
+    .Import_content p {
+        padding: 0px 50px;
+        line-height: 22px;
     }
     .window_with_tabs {
         margin: 0;
     }
     .graphic_review {
-        margin-top: 30px;
+        margin-top: 60px;
     }
     .outer_delight_visitor_section .section_content{
         padding: 0px 6px;
     }
+    .logos_framework div {
+        width: 20%;
+    }
+    .trusted_partners h2{
+        padding: 0px 30px 20px;
+        margin: 0;
+    }
+    .hero_tittle_section .hero_description {
+        padding: 47px 0px;
+    }
+    .trusted_partners {
+        padding-bottom: 80px;
+        padding-top: 42px;
+    }
+    .build_inspiration_heading h2 {
+        font-size: 38px;
+        line-height: 45px;
+        font-weight: 600;
+        text-wrap: balance;
+    }
+    .build_inspiration_heading p {
+        padding: 0px 5px;
+        font-weight: 300;
+    }
+    .develop_demo {
+        padding-top: 72px;
+    }
+    .develop_demo .develop_demos_window .commerce_website .window_with_tabs {
+        padding: 3px 26px 3px 90px;
+        gap: 60px;
+    }
+    .develop_demo_benefits_item p {
+        font-size: 16px;
+    }
+    .works_frameworks {
+        margin-bottom: 41px;
+        margin-top: 40px;
+    }
+    .develop_demo_benefits_item h5 {
+        font-size: 20px;
+        letter-spacing: 0px;
+    }
+    .preview-item_wrapper .window_screen {
+        margin-top: 40px;
+        height: 250px;
+    }
+    .stack_stack{
+        justify-content: center;
+    }
+    .previus_push_comment{
+        margin-left: 59px;
+    }
+    .preview_messages_content p {
+        text-align: center;
+    }
+    .ship_section_heading h2 {
+        font-size: 35px;
+        justify-content: center;
+        display: flex;
+    }
+    .outer_delight_visitor_section .section_content h5 {
+        text-wrap:balance;
+    }
+    .ship_section_heading {
+        margin-bottom: 10px;
+        color: #222;
+    }
+    .ship_section_item a{
+        text-transform: capitalize;
+    }
+    .get_started_button_information {
+        padding: 0px 30px;
+    }
+    .Import_Git_Repository .Import_content {
+        padding: 15px;
+    }
+    .begin_your_journey .container {
+        padding: 0;
+    }
+    .framework_inner_card {
+        padding-left: 0;
+    }
+    .get_started_wrapper {
+        padding-bottom: 0px;
+    }
+    .begin_your_journey {
+        padding: 5px 0px 0px;
+    } 
+    .antialiased {
+        font-weight: 400;
+        font-size: .875rem;
+        padding: 5px 0px;
+    }
+    .copyright{
+        padding-top: 20px !important;
+        margin: 0;
+    }
+    
 }
