added responsive and dark theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -252,7 +252,7 @@ canvas {
     background: #000;
   }
   .darktext{
-    color: #eaeaea;
+    color: #ededed;
   }
   .darksvg{
     background-color: #333;
@@ -325,5 +325,52 @@ canvas {
 .dark_border_background{
   background-color: #161b22;
 
+}
+.dark-text-color{
+  color: #888888;
+}
+.dark_content_color{
+  color: #a1a1a1;
+
+}
+.dark_bordered{
+  border-color:  #333;
+}
+.dark-subtitle-color{
+  color: #999;
+}
+.dark-table-title{
+  color: #c9d1d9;
+}
+.dark-border-bg{
+ border: 1px solid #333;
+}
+.dark-table-content{
+  color: #8b949e;
+}
+.dark-link-color{
+  color: #58a6ff;
+}
+.darkborder{
+  border-right-color: #333;
+}
+.dark_color_border{
+border: 1px solid #111;
+}
+.dark-border-color{
+border: 1px solid #30363d;
+}
+.dark-white-color{
+  color: #fff;
+}
+.dark-back-color{
+  color: #111111;
+}
+.antialiased {
+  color: #ededed;
+}
+.dark_background{
+  background-color: #000;
+  color: #ededed;
 }
 }
