--- a/app/globals.css
+++ b/app/globals.css
@@ -144,6 +144,30 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'Space Grotesk';
+  src:url('/public/fonts/SpaceGrotesk-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Space Grotesk';
+  src:url('/public/fonts/SpaceGrotesk-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Space Grotesk';
+  src: url('/public/fonts/SpaceGrotesk-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 /* font webkit close */
 
@@ -164,6 +188,8 @@
 /* padding */
 :root {
   --geist-space-gap: 24px;
+  --geist-page-width: 1200px;
+
 }
 .token_token-k__OmoSP {
   --k-color: var(--geist-foreground);
@@ -194,6 +220,13 @@ canvas {
     -webkit-transform: translateX(calc(-250px * 7));
     transform: translateX(calc(-250px * 7));
   }
+}
+.giest_wrapper{
+  max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    padding:0;
 }
 .slider {
   background: pr;
@@ -302,9 +335,6 @@ canvas {
   .border_none{
     border: none;
   }
-  .vite_img img{
-    height: 150px;
-}
 .gradient_color{
   background: linear-gradient(#222 30%, #019ae9 70%);
 }
@@ -324,14 +354,12 @@ canvas {
 }
 .dark_border_background{
   background-color: #161b22;
-
 }
 .dark-text-color{
   color: #888888;
 }
 .dark_content_color{
   color: #a1a1a1;
-
 }
 .dark_bordered{
   border-color:  #333;
